--- a/about.html
+++ b/about.html
@@ -5,85 +5,104 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>About BeatScratch</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/png" href="favicon.png" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<style>
-			thead th { position: sticky; top: 0; }
-thead { position: sticky; top: 0; }
 
+<head>
+	<title>About BeatScratch</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="shortcut icon" type="image/png" href="favicon.png" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+	<style>
+		thead th {
+			position: sticky;
+			top: 0;
+		}
 
-		</style>
-	</head>
-	<body class="is-loading">
+		thead {
+			position: sticky;
+			top: 0;
+		}
+	</style>
+</head>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<body class="is-loading">
 
-				<!-- Header -->
-					<header id="header">
-						<a href="./" class="logo">BeatScratch</a>
-					</header>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li><a href="./">Home</a></li>
-							<li><a href="usage.html">Usage</a></li>
-							<li><a href="platforms.html">Platforms</a></li>
-							<li><a href="hardware.html">Hardware</a></li>
-							<li><a href="open_source.html">Open Source</a></li>
-							<li><a href="https://medium.com/fully-automated-luxury-robot-music">Blog</a></li>
-							<li class="active"><a href="about.html">About</a></li>
-						</ul>
-						<!--ul class="icons">
+		<!-- Header -->
+		<header id="header">
+			<a href="./" class="logo">BeatScratch</a>
+		</header>
+
+		<!-- Nav -->
+		<nav id="nav">
+			<ul class="links">
+				<li><a href="./">Home</a></li>
+				<li><a href="usage.html">Usage</a></li>
+				<li><a href="platforms.html">Platforms</a></li>
+				<li><a href="hardware.html">Hardware</a></li>
+				<li><a href="open_source.html">Open Source</a></li>
+				<li><a href="https://medium.com/fully-automated-luxury-robot-music">Blog</a></li>
+				<li class="active"><a href="about.html">About</a></li>
+			</ul>
+			<!--ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul-->
-					</nav>
+		</nav>
 
-				<!-- Main -->
-					<div id="main">
-								<article class="post featured">
-									<h2>About BeatScratch</h2>
-									<p>
-										BeatScratch is the insomnia-and/or-acid-induced nights and weekends musical software baby
-										of <b>Jon&nbsp;Latané</b>&nbsp;<a href="https://github.com/jonlatane" class="icon fa-github"><span class="label">GitHub</span></a>&nbsp;<a href="https://www.linkedin.com/in/jon-latane/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a>&nbsp;<a href="https://www.instagram.com/jon_luvs_ya/" class="icon fa-instagram"><span class="label">Instagram</span></a>, 
-										a full-stack software engineer based in the Research Triangle
-										area of North Carolina. In real life he works on much more sensible and profitable
-										projects for people that pay him and give him insurance. He also plays music, runs, hikes, lifts weights, 
-										climbs, breakdances and does lots of other things very badly.
-									</p>
-									<h2>Attributions</h2>
-									<p>
-										BeatScratch uses some icons and graphics requiring attribution, and some not. Some open-source components
-										(whose licenses are carefully followed) and plenty of proprietary code. The following attributions for dope 
-										UI components are mandated by some Creative Commons license or another:
-									</p>
-									<p>
-										<ul>
-											<li><a href="https://www.behance.net/ale_es"><b>Ale Estrada</b></a>/<a href="https://thenounproject.com/search/?q=piano&i=148083"><b>The Noun Project</b></a> for the piano icon.</li>
-											<li><a href="https://fontawesome.com"><b>FontAwesome Icons</b></a> for the GitHub, Globe, and other icons.</li>
-										</ul>
-									</p>
-									<p>
-										I am a sole owner/developer who is mediocre at icons and stuff. I paid people on Fiverr for things. They were <i><b>damn good at their jobs</b></i>. Here's who:
-									</p>
-									<ul>
-										<li><a href="https://www.fiverr.com/prevew"><b>Prevew</b></a> for icon emblem design.</li>
-										<li><a href="https://www.fiverr.com/dandeaconu"><b>Dan Deaconu</b></a> for app store/marketing image design.</li>
-									</ul>
-									<h3>Flutter and other Dependencies</h3>
-									<p>
-										Significant Android, iOS, macOS and web dependencies used are outlined on the <a href="platforms.html#Architectural-Components">Platforms Page.</a>
-										Finally, here's a dump of my <i>pubspec.yaml</i> I'll update once in a while I guess:
-										<pre style="text-align: left;">
+		<!-- Main -->
+		<div id="main">
+			<article class="post featured">
+				<h2>About BeatScratch</h2>
+				<p>
+					BeatScratch is the insomnia-and/or-acid-induced nights and weekends musical software baby
+					of <b>Jon&nbsp;Latané</b>&nbsp;<a href="https://github.com/jonlatane" class="icon fa-github"><span
+							class="label">GitHub</span></a>&nbsp;<a href="https://www.linkedin.com/in/jon-latane/"
+						class="icon fa-linkedin"><span class="label">LinkedIn</span></a>&nbsp;<a
+						href="https://www.instagram.com/jon_luvs_ya/" class="icon fa-instagram"><span
+							class="label">Instagram</span></a>,
+					a full-stack software engineer based in the Research Triangle
+					area of North Carolina. In real life he works on much more sensible and profitable
+					projects for people that pay him and give him insurance. He also plays music, runs, hikes, lifts weights,
+					climbs, breakdances and does lots of other things to varying degrees of success.
+				</p>
+				<h2>Attributions</h2>
+				<p>
+					BeatScratch uses some icons and graphics requiring attribution, and some not. Some open-source components
+					(whose licenses are carefully followed) and plenty of proprietary code. The following attributions for dope
+					UI components are mandated by some Creative Commons license or another:
+				</p>
+				<p>
+				<ul>
+					<li><a href="https://www.behance.net/ale_es"><b>Ale Estrada</b></a>/<a
+							href="https://thenounproject.com/search/?q=piano&i=148083"><b>The Noun Project</b></a> for the piano icon.
+					</li>
+					<li><a href="https://fontawesome.com"><b>FontAwesome Icons</b></a> for the GitHub, Globe, and other icons.
+					</li>
+				</ul>
+				</p>
+				<p>
+					I am a sole owner/developer who is mediocre at icons and stuff. I paid people on Fiverr for things. They were
+					<i><b>damn good at their jobs</b></i>. Here's who:
+				</p>
+				<ul>
+					<li><a href="https://www.fiverr.com/prevew"><b>Prevew</b></a> for icon emblem design.</li>
+					<li><a href="https://www.fiverr.com/dandeaconu"><b>Dan Deaconu</b></a> for app store/marketing image design.
+					</li>
+				</ul>
+				<h3>Flutter and other Dependencies</h3>
+				<p>
+					Significant Android, iOS, macOS and web dependencies used are outlined on the <a
+						href="platforms.html#Architectural-Components">Platforms Page.</a>
+					Finally, here's a dump of my <i>pubspec.yaml</i> I'll update once in a while I guess:
+				<pre style="text-align: left;">
   http: ^0.12.2
   protobuf: ^1.1.0
   unification: ^0.1.15
@@ -111,13 +130,13 @@ thead { position: sticky; top: 0; }
   flutter_appavailability: ^0.0.21
   native_device_orientation: ^0.4.3
 										</pre>
-									</p>
-							</div>
-							</article>
-					</div>
+				</p>
+		</div>
+		</article>
+	</div>
 
-				<!-- Footer -->
-					<!--footer id="footer">
+	<!-- Footer -->
+	<!--footer id="footer">
 						<section>
 							<form method="post" action="#">
 								<div class="field">
@@ -163,20 +182,24 @@ thead { position: sticky; top: 0; }
 						</section>
 					</footer-->
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; 2018 Jon Latan&eacute;</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+	<!-- Copyright -->
+	<div id="copyright">
+		<ul>
+			<li>&copy; 2018 Jon Latan&eacute;</li>
+			<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+		</ul>
+	</div>
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
