--- a/platforms.html
+++ b/platforms.html
@@ -102,12 +102,34 @@ thead { position: sticky; top: 0; }
 										</td>
 										<td><a href="app-staging"><h2>Open<br/>Staging</h2></a></td>
 									</tr>
+									
+									<tr>
+										<td colspan="5"><h2 style="transform:translate(0,10px)">Social Features</h2></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Explore<br/>BeatScratch<br/>Universe</h4></td>
+										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Universe<br/>Voting &<br/>Uploading</h4></td>
+										<td colspan="2" bgcolor="#4DFA90"><p><h2>Yes</h2></td>
+										<td colspan="1" bgcolor="#CFFA53"><p><h4>Beta</h4></td>
+										<td colspan="1" bgcolor="#CFFA53"><p><h4>Voting<br/>Only</h2></p></td>
+									</tr>
+									<tr><td><h4 style="transform:translate(0,-10px)">Edit/arrange<br/>recordings and<br/>share links</h4></td>
+										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
+										<!-- <td colspan="1"><p><h5>Planned</h5></p></td> -->
+									</tr>
+									<tr>
+										<td colspan="5"><h2 style="transform:translate(0,10px)">Listening and Playing</h2></td>
+									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Play<br/>On-Screen<br/>Keyboard</h4></td>
 										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
 									</tr>
-									<tr><td><h4 style="transform:translate(0,-10px)">Playback</h4></td>
+									<tr><td><h4 style="transform:translate(0,-10px)">Playback<br/>And Tempo<br/>Control</h4></td>
 										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
 										<!-- <td colspan="1"><p><h5>Planned</h5></p></td> -->
+									</tr>
+									<tr>
+										<td colspan="5"><h2 style="transform:translate(0,10px)">Creating and Recording</h2></td>
 									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Recording</h4></td>
 										<td colspan="3" bgcolor="#4DFA90"><p><h2>Yes</h2></td>
@@ -120,6 +142,9 @@ thead { position: sticky; top: 0; }
 										<td colspan="3" bgcolor="#4DFA90"><p><h2>Yes</h2></td>
 										<td colspan="1" bgcolor="#F93730"><p><h2>No</h2></p></td>
 									</tr>
+									<tr>
+										<td colspan="5"><h2 style="transform:translate(0,10px)">Exporting Music</h2></td>
+									</tr>
 									<tr><td><h4 style="transform:translate(0,-10px)">Export<br/>MIDI<br/>Data</h4></td>
 										<td colspan="2" bgcolor="#4DFA90"><p><h2>Yes</h2></td>
 										<td colspan="1" bgcolor="#CFFA53"><p><h4>Coming Soon</h4></td>
@@ -131,9 +156,8 @@ thead { position: sticky; top: 0; }
 									<tr><td><h4 style="transform:translate(0,-10px)">Export<br/>Audio</h4></td>
 										<td colspan="4"><p><h2>TBD</h2></td>
 									</tr>
-									<tr><td><h4 style="transform:translate(0,-10px)">Edit/arrange<br/>recordings and<br/>share links</h4></td>
-										<td colspan="4" bgcolor="#4DFA90"><p><h2>Yes</h2></p></td>
-										<!-- <td colspan="1"><p><h5>Planned</h5></p></td> -->
+									<tr>
+										<td colspan="5"><h2 style="transform:translate(0,10px)">Technical Stuff</h2></td>
 									</tr>
 									<tr><td><h4>MIDI<br/>Channels<br/>Supported<br/></h4></td>
 										<td colspan="1"><h2><br/>16</h2></td>
@@ -186,7 +210,7 @@ thead { position: sticky; top: 0; }
 										</td>
 									</tr>
 										
-										<tr><td colspan="5"><br/><h2 id="Architectural-Components">Architectural Components:</h2></td></tr>
+										<tr><td colspan="5"><br/><h2 id="Architectural-Components">Architectural Components</h2></td></tr>
 										<tr><td><h3>User<br/>Interface</h3></td>
 											<td colspan="4"><a class="icon" style="top:30px;" href="https://flutter.dev/"><img src="assets/flutter.png" width="300" height="87"/></a></td></tr>
 										<tr><td><h3>Data<br/>Modeling</h3></td>
