--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							</p>
 							<ul class="actions">
 								<li>
-									<a href="#BeatFlutter">
+									<a href="#BeatScratch">
 										<h2>BeatScratch</h2>
 									</a>
 									<ul class="actions">
@@ -145,7 +145,7 @@
 									</ul>
 								</li>
 								<li>
-									<a href="#BeatFlutterBeta">
+									<a href="#BeatScratchBeta">
 										<h2>BeatScratch: Beta Releases</h2>
 									</a>
 									<ul class="actions">
@@ -163,21 +163,17 @@
 							</ul>
 						</article>
 						<!-- Featured Post -->
-						<article class="post featured" id="BeatFlutter">
+						<article class="post featured" id="BeatScratch">
 							<header class="major">
 								<!--span class="date">April 25, 2017</span-->
 								<h2>BeatScratch</h2>
-								<h4>aka BeatFlutter</h4>
 							</header>
 							<p>
-								BeatFlutter is the codename for the multiplatform (macOS/iOS/Android/Web) Flutter rewrite of BeatScratch
-								(originally an Android-only app). Legacy BeatScratch is on hold and will be replaced with BeatFlutter,
-								though you can still find download links further down this page.
+								BeatScratch is a multiplatform (macOS/iOS/Android/Web) musical scratchpad with
+								General MIDI support (128 instruments + drums), link-based sharing, a Reddit-powered
+								social network (BeatScratch Universe), and more.
 							</p>
-							<p>
-								Most docs here have been updated to reflect the pre-release in favor of the legacy app at this point.
-							</p>
-							<h2>Try the Pre-Release:</h2>
+							<h2>Try it:</h2>
 							<table>
 								<tr>
 									<td><h5>macOS</h5></td>
@@ -211,7 +207,7 @@
 								</tr>
 							</table>
 							<p>
-								Features will generally be initially implemented on macOS first, with equivalent iOS versions dropping a few days later 
+								New features will generally be initially implemented on macOS first, with equivalent iOS versions dropping a few days later 
 								when Apple approves them for TestFlight.
 							</p>
 							<p>
@@ -219,11 +215,11 @@
 							</p>
 							<p>
 								At a high level, whereas the environment for Legacy BeatScratch has been oriented around touching the "page" with your
-								thumbs to edit things, BeatFlutter ditches this entirely to orient towards recording what you play. The <a href="https://medium.com/fully-automated-luxury-robot-music/topologica-jazz-orbifolds-and-your-event-sourced-flux-driven-dream-code-f8e24443a941">"magical" chord-manipulation features</a>
+								thumbs to edit things, the new BeatScratch ditches this entirely to orient towards recording what you play. The <a href="https://medium.com/fully-automated-luxury-robot-music/topologica-jazz-orbifolds-and-your-event-sourced-flux-driven-dream-code-f8e24443a941">"magical" chord-manipulation features</a>
 								from legacy BeatScratch and its retired grandparent Topologica will be added in thoughtfully over time to make them as accessible as possible.
 							</p>
 							<p>
-								Not all of the below features are available yet in BeatFlutter. But they will be.
+								Not all of the below features are available yet in the new BeatScratch. But they will be.
 							</p>
 						</article>
 
@@ -237,7 +233,7 @@
 									BeatScratch Legacy is the first-of-its-kind Android-exclusive
 									<a href="https://github.com/Kotlin/anko">Anko</a>/<a href="https://github.com/fluidsynth/fluidsynth">FluidSynth</a>-based
 									music environment built on the idea of creating harmonies from graphs of chords. BeatScratch Legacy's graphical harmony features have
-									not yet been ported to BeatFlutter.
+									not yet been ported to the new BeatScratch.
 								</p>
 								<!--ul class="actions">
 									<li><a href="#" class="button big">Full Story</a></li>
