update app and stuff

--- a/about.html
+++ b/about.html
@@ -70,8 +70,9 @@
 							class="label">Instagram</span></a>,
 					a full-stack software engineer based in the Research Triangle
 					area of North Carolina. In real life he works on much more sensible and profitable
-					projects for people that pay him and give him insurance. He also plays music, runs, hikes, lifts weights,
-					climbs, breakdances and does lots of other things to varying degrees of success.
+					projects for people that pay him and give him insurance. He also plays music; runs; hikes;
+					lifts weights, himself, and (is also lifted by) other humans;
+					climbs; breakdances and does lots of other things to varying degrees of success.
 				</p>
 				<h2>Attributions</h2>
 				<p>
